--- a/.htaccess
+++ b/.htaccess
@@ -4,3 +4,4 @@ RewriteEngine On
 # RewriteRule ^(.*)$ http://localhost/nook/$1 [R=301,L]
 
 RewriteRule ^home  home.php [NC,L]
+RewriteRule ^about  about.php [NC,L]
